--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Antonio&family=League+Spartan:wght@700&family=Manrope:wght@600;800&family=Outfit&family=Plus+Jakarta+Sans:wght@500;700&family=Red+Hat+Text:wght@700&family=Rubik:wght@400;500&display=swap');
+
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
