--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Antonio&family=League+Spartan:wght@700&family=Manrope:wght@600;800&family=Outfit&family=Plus+Jakarta+Sans:wght@500;700&family=Red+Hat+Text:wght@700&family=Rubik:wght@400;500&display=swap');
+/* 
+button {
+    box-shadow: 0px -4px 0px 0px #B3A497 inset;
+  } */
+.btn-spu {
+    box-shadow: 0px -4px 0px 0px #CC8B13 inset;
+}
+.btn-player {
+    box-shadow: 0px -4px 0px 0px #118C87 inset;
+
+}
+
+.turn {
+
+    box-shadow: 0px -4px 0px 0px #10212A inset;
 
 
+}
 
+.rotate {
+    box-shadow: 0px -4px 0px 0px #6B8997 inset;
+
+}
+
+.square {
+    box-shadow: 0px -4px 0px 0px #10212A inset
+}
+.entry {
+    box-shadow: 0px -4px 0px 0px #10212A inset
+}
+
+.quit {
+    box-shadow: 0px -4px 0px 0px #6B8997 inset;
+}
+
+.next {
+    box-shadow: 0px -4px 0px 0px #CC8B13 inset;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
